# assignments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
life_expectancy/: cleaning.py  country.py  file_strategies.py  io.py  setup.py  strategy_factory.py
life_expectancy/data/: al_life_expectancy.csv  al_life_expectancy.json  create_fixtures.py  eea30_2007_life_expectancy.csv  eu_life_expectancy_sample.tsv  pt_life_expectancy.json  pt_life_expectancy_mine.csv
life_expectancy/tests/: conftest.py  test_cleaning.py  test_country.py  test_io.py
life_expectancy/tests/fixtures/: pt_life_expectancy_expected.csv
